crates/strider/tests/snapshots/v2__x86__arithmetic__smod.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="Srem:u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "6" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
